Fix code overflow

--- a/squashfold/src/scss/_typography.scss
+++ b/squashfold/src/scss/_typography.scss
@@ -51,6 +51,11 @@ strong {
     font-size: $font-size__s;
 }
 
+code {
+    overflow: auto;
+    width: 100%;
+}
+
 .toolbar {
     margin-top: $indent__base;
 
